fix alignment issue

--- a/style.css
+++ b/style.css
@@ -580,3 +580,12 @@ video {
 .font-semibold {
   font-weight: 600;
 }
+
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
+}
